force-app/main/default/objects/DWSalesPerson__c/DWSalesPerson__c.object-meta.xml
<CustomObject>
    <label>DWSalesPerson</label>
    <nameField>
        <label>DWSalesPerson Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DWSalesPersons</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>