force-app/main/default/objects/DWSalesPerson__c/fields/ADUSER__c.field-meta.xml
<CustomField>
    <fullName>ADUSER__c</fullName>
    <label>ADUSER</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>