force-app/main/default/objects/DWSalesPerson__c/fields/EMAIL__c.field-meta.xml
<CustomField>
    <fullName>EMAIL__c</fullName>
    <label>EMAIL</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>