force-app/main/default/objects/DWSalesPerson__c/fields/IS_ACTIVE_IND__c.field-meta.xml
<CustomField>
    <fullName>IS_ACTIVE_IND__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IS_ACTIVE_IND</label>
    <type>Checkbox</type>
</CustomField>