force-app/main/default/objects/DWSalesPerson__c/fields/SALES_PERSON_CODE__c.field-meta.xml
<CustomField>
    <fullName>SALES_PERSON_CODE__c</fullName>
    <externalId>true</externalId>
    <label>Sales Person Code</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>